--- a/style.css
+++ b/style.css
@@ -360,3 +360,13 @@ footer p {
 #contact .container {
    margin: auto; /* Center the container */
 }
+
+footer{
+  background-color: #333; /* Dark background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Center text */
+  padding: 20px; /* Padding for top and bottom */
+  margin-top: 40px; /* Space above the footer */
+  max-width: 900px;
+  margin: 20px auto;
+}
